--- a/Patient Demographics/appsettings.Development.json
+++ b/Patient Demographics/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Patient": "Server=.\\SQLEXPRESS;Database=Patient;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
