--- a/Patient Demographics/appsettings.json
+++ b/Patient Demographics/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PatientDB": "Server=.\\SQLEXPRESS;Database=Patients;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PatientDB": "Server=(localdb)\\mssqllocaldb;Database=Patients;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
