--- a/src/PatientDemographics/PatientDemographics.csproj
+++ b/src/PatientDemographics/PatientDemographics.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\H\source\repos\P10\PatientDemographics\PatientDemographics.xml</DocumentationFile>
+    <DocumentationFile>C:\Users\H\source\repos\P10\src\PatientDemographics\PatientDemographics.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
