--- a/tests/PatientHistory.Tests/PatientHistory.Tests.csproj
+++ b/tests/PatientHistory.Tests/PatientHistory.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\PatientHistory\PatientHistory.csproj" />
+    <ProjectReference Include="..\..\src\PatientHistory\PatientHistory.csproj" />
   </ItemGroup>
 
 </Project>
