Add condition for Docker & Front End Changes Service check the os to know if it run on Docker or not

--- a/src/BlazorPatient/BlazorPatient.csproj
+++ b/src/BlazorPatient/BlazorPatient.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>466360fb-177d-4537-ae7e-b0a729177e61</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
