--- a/src/PatientDemographics/appsettings.json
+++ b/src/PatientDemographics/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PatientDB": "Server=(localdb)\\.;Database=Patients;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PatientDB": "Server=(localdb)\\.;Database=Patients;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DockerPatientDb": "Server=sqldata;Database=Patients;User Id=SA;Password=Passw@rd123!"
   }
 }
