--- a/src/PatientDemographics/Dockerfile
+++ b/src/PatientDemographics/Dockerfile
@@ -3,7 +3,9 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
+#EXPOSE 443
+
+ENV ASPNETCORE_ENVIRONMENT=Development
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
@@ -19,4 +21,4 @@ RUN dotnet publish "PatientDemographics.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PatientDemographics.dll"]
+ENTRYPOINT ["dotnet", "PatientDemographics.dll","--urls", "http://*:5000;https://*:5001"]
