--- a/src/PatientAssessment/PatientAssessment.csproj
+++ b/src/PatientAssessment/PatientAssessment.csproj
@@ -2,29 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <UserSecretsId>831ff717-5f23-4394-801d-17cc6245406a</UserSecretsId>
+    <UserSecretsId>47ea0a1a-d0d8-4d76-9541-2ec49ac6dcb9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\H\source\repos\P10\src\PatientAssessment\PatientAssessment.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>C:\Users\H\source\repos\P10\src\PatientHistory\PatientHistory.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-    <PackageReference Include="FluentValidation.AspNetCore" Version="10.0.3" />
-    <PackageReference Include="Mapster" Version="7.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="MongoDB.Driver" Version="2.12.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
-
   </ItemGroup>
 
 </Project>
