Refactor Move api info to appsettings.json Remove Newtonsoft Move Log.Information to Log.Debug Other Changes

--- a/src/BlazorPatient/appsettings.json
+++ b/src/BlazorPatient/appsettings.json
@@ -1,4 +1,28 @@
 {
+  "BlazorPatient": {
+    "PatientService": {
+      "BaseAddress": "https://localhost:5001",
+      "Endpoint": {
+        "Get": "/Patient/",
+        "Post": "/Patient/addBody",
+        "Put": "/Patient/edit/"
+      }
+    },
+    "NoteService": {
+      "BaseAddress": "https://localhost:5003",
+      "Endpoint": {
+        "Get": "Note/patient/",
+        "Post": "/Note/add",
+        "Put": "/Note/edit/"
+      }
+    },
+    "AssessmentService": {
+      "BaseAddress": "https://localhost:5005",
+      "Endpoint": {
+        "Get": "/Assessment/"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
