--- a/src/PatientAssessment/appsettings.json
+++ b/src/PatientAssessment/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AssessmentService": {
+    "PatientBaseAddress": "https://localhost:5001",
+    "NoteBaseAddress": "https://localhost:5003",
+    "Endpoint": {
+      "Patient": "/Patient/",
+      "Note": "/Note/patient/"
+    },
+    "TriggerTerms": [ "Hemoglobin A1C", "Microalbumin", "Body Height", "Body Weight", "Smoker", "Abnormal", "Cholesterol", "Dizziness", "Relapse", "Reaction", "Antibodies" ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
