--- a/src/PatientDemographics/Dockerfile
+++ b/src/PatientDemographics/Dockerfile
@@ -3,9 +3,13 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
-#EXPOSE 443
+EXPOSE 443
 
-ENV ASPNETCORE_ENVIRONMENT=Development
+ENV ASPNETCORE_ENVIRONMENT=Production
+#ENV ASPNETCORE_Kestrel__Certificates__Default__Password=P@ssword123
+#ENV ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+#ENV ASPNETCORE_HTTPS_PORT=5001
+#ENV ASPNETCORE_URLS=https://+;http://+
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
@@ -21,4 +25,4 @@ RUN dotnet publish "PatientDemographics.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PatientDemographics.dll","--urls", "http://*:5000;https://*:5001"]
+ENTRYPOINT ["dotnet", "PatientDemographics.dll"]
