--- a/src/PatientHistory/Dockerfile
+++ b/src/PatientHistory/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+ENV ASPNETCORE_ENVIRONMENT=Production
+
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
 COPY ["PatientHistory/PatientHistory.csproj", "PatientHistory/"]
