--- a/src/PatientHistory/appsettings.json
+++ b/src/PatientHistory/appsettings.json
@@ -1,6 +1,13 @@
 {
+  "PatientService": {
+    "BaseAddressW": "https://localhost:5001",
+    "BaseAddressL": "https://0.0.0.0:5001",
+    "Endpoint": {
+      "Get": "/Patient/"
+    } 
+  },
   "NoteDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "DatabaseName": "NotesDb"
   },
   "Logging": {
