--- a/src/PatientHistory/appsettings.json
+++ b/src/PatientHistory/appsettings.json
@@ -7,7 +7,8 @@
     } 
   },
   "NoteDbSettings": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionStringW": "mongodb://localhost:27017",
+    "ConnectionStringL": "mongodb://mongo:27017",
     "DatabaseName": "NotesDb"
   },
   "Logging": {
