--- a/src/PatientDemographics/Properties/launchSettings.json
+++ b/src/PatientDemographics/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Patient_Demographics": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
