--- a/src/BlazorPatient/Dockerfile
+++ b/src/BlazorPatient/Dockerfile
@@ -3,7 +3,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
-#EXPOSE 443
+EXPOSE 443
 
 ENV ASPNETCORE_ENVIRONMENT=Development
 
