--- a/src/BlazorPatient/appsettings.json
+++ b/src/BlazorPatient/appsettings.json
@@ -1,7 +1,8 @@
 {
   "BlazorPatient": {
     "PatientService": {
-      "BaseAddress": "https://localhost:5001",
+      "BaseAddressW": "https://localhost:5001",
+      "BaseAddressL": "patientdemographics-api:5000",
       "Endpoint": {
         "Get": "/Patient/",
         "Post": "/Patient/addBody",
