--- a/src/BlazorPatient/appsettings.json
+++ b/src/BlazorPatient/appsettings.json
@@ -2,6 +2,7 @@
   "BlazorPatient": {
     "PatientService": {
       "BaseAddressW": "https://localhost:5001",
+      "BaseAddressL": "http://patientdemographics-api:80",
       "Endpoint": {
         "Get": "/Patient/",
         "Post": "/Patient/addBody",
@@ -9,7 +10,8 @@
       }
     },
     "NoteService": {
-      "BaseAddress": "https://localhost:5003",
+      "BaseAddressW": "https://localhost:5003",
+      "BaseAddressL": "http://patienthistory-api:80",
       "Endpoint": {
         "Get": "Note/patient/",
         "Post": "/Note/add",
@@ -17,7 +19,8 @@
       }
     },
     "AssessmentService": {
-      "BaseAddress": "https://localhost:5005",
+      "BaseAddressW": "https://localhost:5005",
+      "BaseAddressL": "http://patientassessment-api:80",
       "Endpoint": {
         "Get": "/Assessment/"
       }
