--- a/src/PatientAssessment/appsettings.json
+++ b/src/PatientAssessment/appsettings.json
@@ -1,7 +1,9 @@
 {
   "AssessmentService": {
-    "PatientBaseAddress": "https://localhost:5001",
-    "NoteBaseAddress": "https://localhost:5003",
+    "PatientBaseAddressW": "https://localhost:5001",
+    "PatientBaseAddressL": "http://patientdemographics-api:80",
+    "NoteBaseAddressW": "https://localhost:5003",
+    "NoteBaseAddressL": "http://patienthistory-api:80",
     "Endpoint": {
       "Patient": "/Patient/",
       "Note": "/Note/patient/"
