--- a/src/PatientHistory/appsettings.json
+++ b/src/PatientHistory/appsettings.json
@@ -1,10 +1,10 @@
 {
   "PatientService": {
     "BaseAddressW": "https://localhost:5001",
-    "BaseAddressL": "https://0.0.0.0:5001",
+    "BaseAddressL": "http://patienthistory-api:80",
     "Endpoint": {
       "Get": "/Patient/"
-    } 
+    }
   },
   "NoteDbSettings": {
     "ConnectionStringW": "mongodb://localhost:27017",
