Remove unnecessary stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ services:
     ports:
      - "5004:80"
      - "5005:443"
+    depends_on:
+    - patientdemographics-api
+    - patienthistory-api
     networks:
      - bridge
 
