Fix Bugs Fix Darkmode on refresh Fix Note creation on Docker Fix Error display in front-end

--- a/src/BlazorPatient/appsettings.json
+++ b/src/BlazorPatient/appsettings.json
@@ -4,9 +4,9 @@
       "BaseAddressW": "https://localhost:5001",
       "BaseAddressL": "http://patientdemographics-api:80",
       "Endpoint": {
-        "Get": "/Patient/",
-        "Post": "/Patient/addBody",
-        "Put": "/Patient/edit/"
+        "Get": "Patient/",
+        "Post": "Patient/addBody",
+        "Put": "Patient/edit/"
       }
     },
     "NoteService": {
@@ -14,15 +14,15 @@
       "BaseAddressL": "http://patienthistory-api:80",
       "Endpoint": {
         "Get": "Note/patient/",
-        "Post": "/Note/add",
-        "Put": "/Note/edit/"
+        "Post": "Note/add",
+        "Put": "Note/edit/"
       }
     },
     "AssessmentService": {
       "BaseAddressW": "https://localhost:5005",
       "BaseAddressL": "http://patientassessment-api:80",
       "Endpoint": {
-        "Get": "/Assessment/"
+        "Get": "Assessment/"
       }
     }
   },
