--- a/src/PatientAssessment/appsettings.json
+++ b/src/PatientAssessment/appsettings.json
@@ -5,8 +5,8 @@
     "NoteBaseAddressW": "https://localhost:5003",
     "NoteBaseAddressL": "http://patienthistory-api:80",
     "Endpoint": {
-      "Patient": "/Patient/",
-      "Note": "/Note/patient/"
+      "Patient": "Patient/",
+      "Note": "Note/patient/"
     },
     "TriggerTerms": [ "Hemoglobin A1C", "Microalbumin", "Body Height", "Body Weight", "Smoker", "Abnormal", "Cholesterol", "Dizziness", "Relapse", "Reaction", "Antibodies" ]
   },
