--- a/src/PatientHistory/appsettings.json
+++ b/src/PatientHistory/appsettings.json
@@ -1,9 +1,9 @@
 {
   "PatientService": {
     "BaseAddressW": "https://localhost:5001",
-    "BaseAddressL": "http://patienthistory-api:80",
+    "BaseAddressL": "http://patientdemographics-api:80",
     "Endpoint": {
-      "Get": "/Patient/"
+      "Get": "Patient/"
     }
   },
   "NoteDbSettings": {
